# Albert

./: .gitignore  Alg_elements.c  Alg_elements.cpp  Alg_elements.h  Basis_table.c  Basis_table.cpp  Basis_table.h  Build.c  Build.cpp  Build.h  Build_defs.h  CMakeLists.txt  CreateMatrix.c  CreateMatrix.cpp  CreateMatrix.h  CreateSubs.c  CreateSubs.cpp  CreateSubs.h  Debug.h  ExtractMatrix.c  ExtractMatrix.cpp  ExtractMatrix.h  Field.c  Field.cpp  Field.h  GenerateEquations.c  GenerateEquations.cpp  GenerateEquations.h  Generators.c  Generators.cpp  Generators.h  Get_Command.c  Get_Command.cpp  Get_Command.h  Help.c  Help.cpp  Help.h  Help_pri.h  Id_routines.c  Id_routines.cpp  (+96 more)
tests/: big.in  big_original.in  bigger.in  identity.in  medium.in  monster.in  new_problem.in  problem.in  problem2.in  problem3.in  problem4.in  problem5.in  profile.in  small.in
